--- a/create_user.yml
+++ b/create_user.yml
@@ -5,8 +5,6 @@
   gather_facts: false
 
   tasks:
-    - name: Add the user {{user_name}} appending the group '{{user_groups}}' to the user's groups
+    - name: Add the user {{user_name}}
       ansible.builtin.user:
         name: "{{user_name}}"
-        groups: "{{user_groups}}"
-        append: yes
