--- a/create_user.yml
+++ b/create_user.yml
@@ -8,3 +8,5 @@
     - name: Add the user {{user_name}}
       ansible.builtin.user:
         name: "{{user_name}}"
+        password: "{{user_password | password_hash('sha512')}}"
+        comment: "{{user_first_name}} {{user_last_name}}"
