--- a/playbooks/create_user.yml
+++ b/playbooks/create_user.yml
@@ -1,11 +1,11 @@
 ---
-- name: Aplicar actualizaciones non-kernel
+- name: Creacion de usuarios en OS RHEL
   hosts: "{{ HOSTS | default('all') }}"
   become: true
   gather_facts: false
 
   tasks:
-    - name: Add the user {{user_name}}
+    - name: Agregar el usuario {{user_name}}
       ansible.builtin.user:
         name: "{{user_name}}"
         password: "{{user_password | password_hash('sha512')}}"
